@@ -1,6 +1,7 @@
 2021-09-10 Danilo Chang
 
 	* Implement command: FlannBasedMatcher
+	* Implement command: AgastFeatureDetector
 	* Implement command: AKAZE, BRISK
 
 2021-09-09 Danilo Chang
